# openai-agents-python

./: Makefile  pyproject.toml
.github/instructions/: build spec.instructions.md
doso-ai/: ..env.swp  .env.save  README.md  docker-compose.yml  doso_streamlit_app.py  load_sample_data.py  requirements.txt  run_doso_cycle.py  run_openai_app.py  run_streamlit_demo.py  setup_full_environment.sh  streamlit_app.py  streamlit_app_openai.py
doso-ai-package/: PRODUCTION_CHECKLIST.md  README_LEARNING_SYSTEM.md  init-db.sql  pyproject.toml  run_assistants_app.py  run_learning_app.py  run_production_learning_app.py  streamlit_doso_learning.py  streamlit_full_production.py  streamlit_minimal.py  verify_production_readiness.py
doso-ai-package/alembic/: env.py
doso-ai-package/src/: __init__.py  main.py  main_assistants.py
doso-ai-package/src/agents/: allocation_tracking.py  assistants_storage.py  constraint_check.py  guidance_agent.py  market_analysis.py  order_bank_agent.py  order_bank_manager.py  recommendation_agent.py  sva_agent.py  triage_agent.py
doso-ai-package/src/api/routers/: allocation_tracking.py  assistants_router.py  market_analysis.py
doso-ai-package/src/db/: dependencies.py  models.py  redis.py
doso-ai-package/src/examples/: order_bank_example.py
doso-ai-package/src/models/: allocation_tracking.py
doso-ai-package/src/monitoring/: __init__.py  tracing.py
doso-ai-package/src/utils/: agent_query.py  file_batch_monitor.py  file_parser.py  rate_limit_handler.py  upload_to_vector_store.py
doso-ai-package/src/workflow/: __init__.py  doso_workflow.py  orchestration.py  orchestration_openai.py
doso-ai-package/tests/: test_doso_components.py  test_gap_analysis.py  test_integration.py
doso-ai/sample_data/: feedback_sample.csv  inventory_sample.csv  market_sample.csv  sales_sample.csv
doso-ai/src/: config.py  main_openai.py  schemas.py
doso-ai/src/agents/: feedback_collector_agent.py  forecasting_agent.py  gap_analysis.py  inventory_analysis.py  learning_agent.py
doso-ai/tests/: test_inventory_analysis.py  test_learning_system.py  test_market_analysis.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
(+12 files in other folders)
